--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,13 @@
+.parent {
+  background-color: green;
+  padding: 1em;
+}
 
+.parent p {
+    margin-top: 1em;
+}
+
+.child {
+    background-color: orange;
+    padding: 1em;
+}
